--- a/wp-content/themes/mtb_mag_v2/sass/_responsive.scss
+++ b/wp-content/themes/mtb_mag_v2/sass/_responsive.scss
@@ -359,18 +359,18 @@ $contentMaxWidth: 975px;
 				&:after,
 				&:before{
 					content: "";
-					border: 4px solid transparent;
+					border: 5px solid transparent;
 					position: absolute;
 					right: 0;
 				}
 				&:before{
 					border-top-color: white;
-					border-top-width: 6px;
+					border-top-width: 7px;
 					top: 6px;
 				}
 				&:after{
 					border-top-color: $mainGrey;
-					border-top-width: 8px;
+					border-top-width: 7px;
 					top: 2px;
 					display: none;
 				}
